# dashpipe-core

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENCE.txt  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
src/: error.rs  lib.rs
src/kafka/: kafka_input.rs  kafka_output.rs  mod.rs
src/nats/: mod.rs  nats_input.rs  nats_output.rs
src/standard/: mod.rs  stdin_input.rs  stdout_output.rs
tests/: nats_integration.rs
