[package]
name = "dashpipe"
version = "0.0.3"
authors = ["eleduardo <eleduardo.solis@gmail.com>"]
edition = "2018"
description = "Core library to power dashpipe stream processing"
repository = "https://github.com/dashpipe/dashpipe-core"
readme = "README.md"
keywords = ["traffic", "observsability", "streaming"]
categories = ["streaming"]
license = "Apache-2.0"

[badges]


[dependencies]
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
failure = "0.1"
failure_derive = "0.1"
futures = "0.1"
crossbeam = "0.7"
rdkafka = "0.19"
nitox = "0.1"
tokio = "0.1"
prometheus = "0.6"

lazy_static = "1.3.0"

[dev-dependencies]
testcontainers = "0.6"